# Bootcamp

./: README.md  daily-log.md  index.html  mkdocs.yml  pyproject.toml
Dataflow_framework/Abstraction-level-0/: README.MD  input.txt
Dataflow_framework/Abstraction-level-1/: README.md  input.txt  process.py  result.txt
Dataflow_framework/Abstraction_level_2/: README. md  cli.py  core.py  input.txt  main.py  output.txt  pipeline.py  processor_types.py
Dataflow_framework/Abstraction_level_3/: README.md  cli.py  input.txt  main.py  output.txt  pipeline.py  pipeline.yaml
Dataflow_framework/Abstraction_level_4/: README.md  cli.py  input.txt  output.txt  pipeline.yaml
Dataflow_framework/Abstraction_level_5/: README.md  cli.py  dag_engine.py  input.txt  pipeline.yaml
Dataflow_framework/Abstraction_level_6/: README.md  cli.py  config.yaml  main.py
Dataflow_framework/Abstraction_level_7/: README.md  dashboard.py  main.py  metrics.py  observability.py
Dataflow_framework/Abstraction_level_8/: README.md  main.py
Dataflow_framework/Final_wrapup/: Dockerfile  FINAL.md  README.md  run.bat
Day_0/: README.md  main.py  pyproject.toml
Day_0/Ex-basics_1/ankita_hello/: README.md  pyproject.toml
Day_0/Ex_basics_2/: main.py
Day_0/Ex_basics_3/: pyproject.toml  setup.py
Day_0/Ex_basics_3/ankita_hello_cli/: main.py
Day_0/Ex_basics_3/ankita_hello_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Day_0/config/: constants.py
Day_0/services/: user_service.py
Day_0/utils/: exceptions.py
Day_1/: README.md  mkdocs.yml
Day_1/docs/: about.md  (+3 more)
Day_2/Section_7/mypkg_project/: pyproject.toml  setup.py  test_script.py
Day_2/Section_7/mypkg_project/mypkg/: cli.py
Day_2/Section_7/mypkg_project/mypkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
about/: index.html
architecture/: index.html
design-doc/: index.html
docs/: about.md  architecture.md  design-doc.md  features.md  index.md  login.md  register.md
search/: search_index.json
site/: 404.html  index.html
(+79 files in other folders)
