[project]
name = "ankita-hello"
version = "0.1.0"
description = "A simple Python package that greets you."
authors = [{ name = "Ankita Sinha", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://test.pypi.org/project/ankita-hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ankita_hello"]

