[project]
name = "mypkg"
version = "0.1.0"
description = "A simple Python package with CLI"
authors = [{name = "Ankita Sinha", email = "ankitasinha2912@gmail.com"}]
dependencies = []
license = "MIT"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mypkg = "mypkg.cli:main"
